ArrayTypeConvertTest.java